[package]
name = "lighthouse"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1"
ogl33 = { version = "0.2.0", features = ["debug_error_checks"]}
beryllium = "0.2.0-alpha.4"
imagine = "0.0.5"
image = "0.24.2"
common_macros = "0.1.1"
nalgebra-glm = "0.17.0"
device_query = "1.1.1"